# django-doorman

./: CHANGELOG.md  CONTRACTS.md  README.md  __init__.py  admin.py  apps.py  conf.py  exceptions.py  gates.py  pyproject.toml  senders.py  signals.py  urls.py  utils.py
adapters/: __init__.py  guestman.py  noop.py
contrib/admin_unfold/: admin.py  apps.py
docs/concepts/: authentication-flows.md
management/commands/: doorman_cleanup.py
migrations/: 0001_initial.py  0002_rename_doorman_bri_custome_a1b2c3_idx_doorman_bri_custome_c6586e_idx_and_more.py  0003_alter_bridgetoken_options_alter_identitylink_options_and_more.py  0004_rename_code_to_code_hash_identitylink_metadata.py  0005_trusteddevice.py
models/: __init__.py  bridge_token.py  identity_link.py  magic_code.py
protocols/: customer.py
services/: __init__.py  auth_bridge.py  device_trust.py  magic_link.py  verification.py
tests/: conftest.py  test_device_trust.py  test_exceptions.py  test_magic_link.py  test_models.py  test_normalize_phone.py  test_security.py  test_views.py
views/: __init__.py  bridge.py  magic_code.py  magic_link.py
